# AEADs

crypto_box/: Cargo.toml
crypto_box/src/: lib.rs
xsalsa20poly1305/: Cargo.toml
xsalsa20poly1305/src/: lib.rs
