[package]
name = "xsalsa20poly1305"
version = "0.6.0"
description = """
Pure Rust implementation of the XSalsa20Poly1305 (a.k.a. NaCl crypto_secretbox)
authenticated encryption algorithm
"""
authors = ["RustCrypto Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/xsalsa20poly1305"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "salsa20", "poly1305", "xsalsa20"]
categories = ["cryptography", "no-std"]

[dependencies]
aead = { version = "0.3", default-features = false }
salsa20 = { version = "0.7", features = ["xsalsa20", "zeroize"] }
poly1305 = "0.6"
#rand_core = { version = "0.5", optional = true }
rand_core = { branch = "feature/only-trait", git = "https://github.com/cipepser/rand", default-features = false, optional = true }
#rand_core = { rev = "v0.7.3_sgx1.1.3", git = "https://github.com/mesalock-linux/rand-sgx", default-features = false, optional = true }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }
#libc-print = "0.1"

[features]
default = ["alloc", "rand_core"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]
std = ["aead/std", "alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
